Aggiunta bozza per i test case di put (WriteCache)

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -347,7 +347,7 @@
                   <goal>exec</goal>
                 </goals>
                 <configuration>
-                  <workingDirectory>${basedir}/src/test/resources</workingDirectory>
+                  <workingDirectory>src/main/test/resources</workingDirectory>
                   <executable>${basedir}/src/test/resources/generateKeysAndCerts.sh</executable>
                 </configuration>
               </execution>
